feat: add thanks thingie and copy button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
       <label class="label" for="midi">
         Archivo MIDI
         <input class="input" type="file" id="midi" name="midi" accept="audio/midi">
-      </label>
+      </label><br/>
 
+      <button id="copy-btn" class="copy-button">Copiar?</button>
+      <pre id="result" class="code">
+El resultado aparecerá aquí
+      </pre>
+
+      <div hidden id="thanks" class="thanks-bottom">
+        De nada 😎🥰
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
